@@ -2,7 +2,7 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: Client Library API plug-in
 Bundle-SymbolicName: org.netxms.ui.eclipse.clientlibrary;singleton:=true
-Bundle-Version: 2.0.6
+Bundle-Version: 2.0.7
 Bundle-Vendor: netxms.org
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ClassPath: lib/simple-xml-2.6.4.jar,
