@@ -7,10 +7,10 @@ Bundle-Activator: org.netxms.ui.eclipse.objectview.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.eclipse.ui;bundle-version="3.8.2",
  org.eclipse.core.runtime;bundle-version="3.8.0",
- org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.6",
- org.netxms.ui.eclipse.console;bundle-version="2.0.5",
+ org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.7",
+ org.netxms.ui.eclipse.console;bundle-version="2.0.7",
  org.netxms.ui.eclipse.charts;bundle-version="2.0.0",
- org.netxms.ui.eclipse.objecttools;bundle-version="2.0.3"
+ org.netxms.ui.eclipse.objecttools;bundle-version="2.0.6"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
 Export-Package: org.netxms.ui.eclipse.objectview.api,
