@@ -475,6 +475,18 @@ NXSL_Value *NXSL_NodeClass::getAttr(NXSL_Object *pObject, const TCHAR *pszAttr)
    {
       pValue = new NXSL_Value(pNode->getSNMPObjectId());
    }
+   else if (!_tcscmp(pszAttr, _T("snmpSysContact")))
+   {
+      pValue = new NXSL_Value(pNode->getSysContact());
+   }
+   else if (!_tcscmp(pszAttr, _T("snmpSysDescription")))
+   {
+      pValue = new NXSL_Value(pNode->getSysDescription());
+   }
+   else if (!_tcscmp(pszAttr, _T("snmpSysLocation")))
+   {
+      pValue = new NXSL_Value(pNode->getSysLocation());
+   }
    else if (!_tcscmp(pszAttr, _T("snmpSysName")))
    {
       pValue = new NXSL_Value(pNode->getSysName());
@@ -490,10 +502,6 @@ NXSL_Value *NXSL_NodeClass::getAttr(NXSL_Object *pObject, const TCHAR *pszAttr)
    else if (!_tcscmp(pszAttr, _T("streetAddress")))
    {
       pValue = new NXSL_Value(pNode->getPostalAddress()->getStreetAddress());
-   }
-   else if (!_tcscmp(pszAttr, _T("sysDescription")))
-   {
-      pValue = new NXSL_Value(pNode->getSysDescription());
    }
    else if (!_tcscmp(pszAttr, _T("zone")))
 	{
