@@ -2,13 +2,13 @@ Manifest-Version: 1.0
 Bundle-ManifestVersion: 2
 Bundle-Name: NXMC Object Viewer Plug-in
 Bundle-SymbolicName: org.netxms.ui.eclipse.objectview;singleton:=true
-Bundle-Version: 2.0.5
+Bundle-Version: 2.0.6
 Bundle-Activator: org.netxms.ui.eclipse.objectview.Activator
 Bundle-Vendor: netxms.org
 Require-Bundle: org.netxms.ui.eclipse.charts;bundle-version="2.0.0",
  org.eclipse.rap.ui;bundle-version="2.3.0",
  org.netxms.webui.core;bundle-version="2.0.5",
- org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.5",
+ org.netxms.ui.eclipse.clientlibrary;bundle-version="2.0.7",
  org.netxms.ui.eclipse.objecttools;bundle-version="2.0.4"
 Bundle-RequiredExecutionEnvironment: JavaSE-1.6
 Bundle-ActivationPolicy: lazy
